--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -8,9 +8,10 @@
                 
             </head>
     <body>
-        <div id="event-handling">
-            <p>{{ message }}</p>
-            <button v-on:click="reverseMessage">反转 Message</button>
-        </div>
+        <div id="color-demo">
+            <color-option class="color-option" color="#aa1256"></color-option>
+            <color-option class="color-option" color="#0034ef"></color-option>
+            <color-option class="color-option" color="#458700"></color-option>
+          </div>
     </body>
 </html>
