最小可用版本，只能改颜色，不能保存

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -8,10 +8,14 @@
                 
             </head>
     <body>
-        <div id="color-demo">
-            <color-option class="color-option" color="#aa1256"></color-option>
-            <color-option class="color-option" color="#0034ef"></color-option>
-            <color-option class="color-option" color="#458700"></color-option>
+        <div class="section-name">Toolbar theme color for this page:</div>
+        <div id="color-group">
+            <color-option class="color-option" color="#ffffff"></color-option>
+            <color-option class="color-option" color="#000000"></color-option>
+<!--            <color-option class="color-option" color="#458700"></color-option>-->
+            <div id="color-picker-wrapper">
+                  <input id="color-picker" type="color" value="#eeeeee">
+            </div>
           </div>
     </body>
 </html>
